--- a/src/web/JavaScript/14.md
+++ b/src/web/JavaScript/14.md
@@ -178,7 +178,7 @@ Function.__proto__ === Function.prototype // true
 
 > 经典图
 
-![prototypes](./images//prototype/prototypes-1.jpg)
+![prototypes](./images/prototypes-1.jpg)
 
 ## 总结
 
