--- a/src/web/Vue/05.md
+++ b/src/web/Vue/05.md
@@ -43,7 +43,7 @@ vue create navie-mall
 # 选择代码格式化工具
 ```
 
-![images](/images/v1.png)<br />然后按照终端提示完成以下操作：
+<br />然后按照终端提示完成以下操作：
 
 ```bash
 Choose a version of Vue.js that you want to start the project with
@@ -63,7 +63,7 @@ Sass/SCSS (with node-sass)
 
 ```
 
-启动项目 npm run serve，访问 http://localhost:8080，如下图：<br />![images](/images/v2.png)表示 Webpack + Vue3 + TypeScript + Vue Router 简单的项目骨架搭建完毕，下面我们来为这个项目集成 Pinia、Navie UI、Axios、Sass。
+启动项目 npm run serve，访问 http://localhost:8080，表示 Webpack + Vue3 + TypeScript + Vue Router 简单的项目骨架搭建完毕，下面我们来为这个项目集成 Pinia、Navie UI、Axios、Sass。
 
 ### 修改 vue.config 配置文件
 
