--- a/src/web/Vue/06.md
+++ b/src/web/Vue/06.md
@@ -31,7 +31,7 @@ trim_trailing_whitespace = false
 
 注意：
 
-- VSCode 使用 EditorConfig 需要去插件市场下载插件 **EditorConfig for VS Code** 。![images](/images/v3.png)
+- VSCode 使用 EditorConfig 需要去插件市场下载插件 **EditorConfig for VS Code** 。
 - JetBrains 系列（WebStorm、IntelliJ IDEA 等）则不用额外安装插件，可直接使用 EditorConfig 配置。
 
 ### 集成 Prettier 配置
@@ -73,7 +73,6 @@ npx prettier --write .
 
 - VSCode 编辑器使用 Prettier 配置需要下载插件 **Prettier - Code formatter** 。
 
-![images](/images/v4.png)
 
 - JetBrains 系列编辑器（WebStorm、IntelliJ IDEA 等）则不用额外安装插件，可直接使用 Prettier 配置。
 
