--- a/src/web/Vue/02.md
+++ b/src/web/Vue/02.md
@@ -14,7 +14,7 @@ const vm = new Vue({
     return {
       title: '标题',
       main: '研究数据劫持',
-      author: '黑猫',
+      author: '我',
       list: [1, 2, 3, 4],
       info: {
         a: {
