--- a/src/web/Vue/03.md
+++ b/src/web/Vue/03.md
@@ -67,7 +67,7 @@ vue1.message = 'hello Vue'
 
 奇怪的事情发生了，我知识改变了 vue1 的实例中的数据，但是其他实例的数据也发生了改变，相信很简单就能看出来这应该是共用同一个对象的引用而导致的，这在开放中是非常不友好的，开发者很容易就产生连串的错误，vue2 也知道这种缺陷只是没有在普通实例中去体现而已，只在组件中实现了对于 data 的约束
 
-**为了让大家更好的立即为啥 data 必须是一个函数，黑猫在此简单实现一个 vue 的实例然后来证明为啥 data 是一个函数，以及如果 data 不是一个函数，我们应该如何处理**
+**为了让大家更好的立即为啥 data 必须是一个函数，我在此简单实现一个 vue 的实例然后来证明为啥 data 是一个函数，以及如果 data 不是一个函数，我们应该如何处理**
 
 ### 3.证明 data 是函数以及原理实现
 
@@ -144,4 +144,4 @@ console.log(vue2.$data.a) // hello Vue
 ### 4.如果 data 必须是一个对象呢？
 
 假如有人提出如果 data 是一个对象，那么我们应该如何处理呢，其实也非常简单，在代理的时候我们可以将传入的 data 对象通过深拷贝即可，这样我们就不会使用相同引用的对象啦。<br>
-[深拷贝牛逼封装参考我以前的文章]([不一样的深拷贝 - 掘金 (juejin.cn)](https://juejin.cn/post/7120893997718962213))
+[深拷贝牛逼封装参考此文章]([不一样的深拷贝 - 掘金 (juejin.cn)](https://juejin.cn/post/7120893997718962213))
