--- a/src/web/JavaScript/06.md
+++ b/src/web/JavaScript/06.md
@@ -1,5 +1,3 @@
-## promise 后续
-
 ### 前言
 
 上个文章我们利用 promsieA+规范实现了 promise，这可以帮助我们理解大部分的 promise 知识并且做解决大部分的面试题以及开发问题，但是却还有很多瑕疵，我会用简单的篇幅让大家了解，让 promise 在大家眼里变的简单
@@ -22,7 +20,7 @@ A+规范判断 x 是不是一个 promise 采用假设给 x 一个 then 的属性
 ![image.png](https://codfeather.oss-cn-shenzhen.aliyuncs.com/blog/resovePromise3.webp)
 A+规范的意思是直接同步执行 return 里面的代码，然后将其的 promise 对象确定好，然后 return 出去，按照这种说法，只有下面的 then 方法的回调函数才会加入到微任务队列中，我们通过一个例子来演示看看其中到底有什么不一样的地方
 
-### 2.1 return 普通值
+#### 2.1 return 普通值
 
 ```js
 let p1 = Promise.resolve(1)
@@ -48,7 +46,7 @@ let p3 = p1
 ![image.png](https://codfeather.oss-cn-shenzhen.aliyuncs.com/blog/resovePromise4.webp)
 通过执行结果可以看出再 return 一个普通值的时候好像确实是同步的把 1 包装成 fulfilled 状态的 promise 对象传递下去，我们再通过一个例子来看
 
-### 2.2 return 包含 then 方法的对象
+#### 2.2 return 包含 then 方法的对象
 
 ```js
 let p1 = Promise.resolve(1)
@@ -93,7 +91,7 @@ let p3 = p1
 
 **总结：当 return 一个包含 then 方法对象的时候会为其创建一个微任务队列**
 
-### 2.3 return 一个 promise 对象
+#### 2.3 return 一个 promise 对象
 
 如下面代码
 
