--- a/src/skill/RM-02.md
+++ b/src/skill/RM-02.md
@@ -2,6 +2,14 @@
 title: Git 入门使用
 ---
 
+## Git提交失败(Timeout)解决方案
+
+在打开的`git bash`或者`控制台`中输入以下命令即可（让本地的`git`走代理）
+
+```sh
+git config --global http.proxy 127.0.0.1:7890
+```
+
 ## 设置用户信息
 
 ```sh
