--- a/src/web/React/01.md
+++ b/src/web/React/01.md
@@ -33,6 +33,49 @@ function Example() {
   );
 }
 ```
+### 伪代码
+```jsx
+function useState(initialValue) {
+    // 获取当前组件的上下文
+    const currentComponent = React.__currentComponent;
+
+    // 获取下一个状态钩子的索引
+    const hookIndex = currentComponent.__nextHookIndex++;
+
+    // 首次渲染时，设置初始值
+    if (currentComponent.__isFirstRender) {
+        // 初始化状态和更新函数
+        currentComponent.__hooks[hookIndex] = {
+            state: initialValue,
+            queue: []
+        };
+    }
+
+    // 获取当前的钩子
+    const hook = currentComponent.__hooks[hookIndex];
+
+    // 如果有更新排队，应用这些更新
+    hook.queue.forEach(update => {
+        hook.state = update(hook.state);
+    });
+
+    // 清空更新队列
+    hook.queue = [];
+
+    // setState函数，用于更新状态
+    const setState = (newState) => {
+        // 将更新函数加入队列
+        hook.queue.push(newState instanceof Function ? newState : () => newState);
+
+        // 触发组件的重新渲染
+        React.__scheduleRender(currentComponent);
+    };
+
+    // 返回状态值和更新状态的函数
+    return [hook.state, setState];
+}
+
+```
 
 ## 2. useEffect
 
@@ -60,6 +103,31 @@ function Example() {
   );
 }
 ```
+### 伪代码
+```jsx
+function useEffect(effectFunction, dependencies) {
+    const currentComponent = React.__currentComponent;
+    const hookIndex = currentComponent.__nextHookIndex++;
+
+    const lastDependencies = currentComponent.__hooks[hookIndex]?.lastDependencies;
+
+    // 检查依赖是否发生变化
+    const hasChanged = lastDependencies === undefined || dependencies.some((dep, i) => dep !== lastDependencies[i]);
+
+    if (hasChanged) {
+        // 清理上一次的副作用（如果存在）
+        if (currentComponent.__hooks[hookIndex]?.cleanup) {
+            currentComponent.__hooks[hookIndex].cleanup();
+        }
+
+        // 执行副作用函数
+        currentComponent.__hooks[hookIndex] = {
+            lastDependencies: dependencies,
+            cleanup: effectFunction()
+        };
+    }
+}
+```
 
 ## 3. useContext
 
@@ -78,6 +146,22 @@ function Example() {
 }
 ```
 
+### 伪代码
+```jsx
+function useContext(context) {
+    // 获取当前组件的上下文
+    const currentComponent = React.__currentComponent;
+
+    // 检索上下文的当前值
+    const contextValue = React.__getContextValue(context);
+
+    // 组件订阅上下文的变化
+    React.__subscribeToContext(context, currentComponent);
+
+    // 返回上下文的当前值
+    return contextValue;
+}
+```
 ## 4. useReducer
 
 **用途**：用于更复杂的组件状态逻辑，它接受一个状态更新的函数和初始状态，返回当前的状态和一个让你能够触发状态更新的 dispatch 方法。
@@ -110,6 +194,43 @@ function Counter() {
   );
 }
 ```
+### 伪代码
+```jsx
+function useReducer(reducer, initialState) {
+    // state 用于存储当前状态
+    let state = initialState;
+
+    // dispatch 函数用于触发状态更新
+    const dispatch = (action) => {
+        // 调用 reducer 函数来计算新状态
+        state = reducer(state, action);
+        // 这里简化了更新组件的逻辑。
+        // 在真实的 React useReducer 中，会触发组件的重新渲染
+    };
+
+    // 返回当前状态和 dispatch 函数
+    return [state, dispatch];
+}
+
+// reducer 函数定义了如何响应不同的动作并更新状态
+function reducer(state, action) {
+    switch (action.type) {
+        case 'increment':
+            return state + 1;
+        case 'decrement':
+            return state - 1;
+        default:
+            throw new Error();
+    }
+}
+
+// 使用 useReducer
+const [state, dispatch] = useReducer(reducer, 0);
+
+// 触发状态更新
+dispatch({ type: 'increment' }); // state 现在是 1
+dispatch({ type: 'decrement' }); // state 现在是 0
+```
 
 ## 5. useRef
 
@@ -122,7 +243,7 @@ import React, { useRef } from 'react';
 
 function TextInputWithFocusButton() {
   const inputEl = useRef(null);
-  the onButtonClick = () => {
+  onButtonClick = () => {
     inputEl.current.focus();
   };
   return (
@@ -132,6 +253,28 @@ function TextInputWithFocusButton() {
     </>
   );
 }
+```
+### 伪代码
+```jsx
+function useRef(initialValue) {
+    // useRef 使用一个对象来存储引用的值，这个对象有一个叫做 'current' 的属性
+    const refObject = { current: initialValue };
+
+    // 返回这个对象
+    return refObject;
+}
+
+// 使用 useRef
+const myRef = useRef(0);
+
+// 访问 ref 的值
+console.log(myRef.current); // 输出 0
+
+// 更新 ref 的值
+myRef.current = 10;
+
+// 再次访问 ref 的值
+console.log(myRef.current); // 输出 10
 ```
 
 ## 6. useMemo
@@ -167,4 +310,37 @@ function Example({ onIncrement }) {
   );
   return <button onClick={memoizedCallback}>Increment</button>;
 }
+```
+### 伪代码
+```jsx
+function useMemo(factory, deps) {
+    // 用于存储记忆化值的变量
+    let memoizedValue;
+
+    // 用于存储依赖数组的上一次值的变量
+    let oldDeps = deps;
+
+    if (depsChanged(oldDeps, deps)) {
+        // 如果依赖项改变了，重新计算值
+        memoizedValue = factory();
+        oldDeps = deps;
+    }
+
+    // 返回记忆化的值
+    return memoizedValue;
+}
+
+function depsChanged(oldDeps, deps) {
+    // 比较旧的依赖项和新的依赖项，判断它们是否相等
+    // 这里简化了实际的比较逻辑
+    return oldDeps !== deps;
+}
+
+// 使用 useMemo
+const expensiveValue = useMemo(() => {
+    // 进行复杂计算
+    return computeExpensiveValue(a, b);
+}, [a, b]);
+
+// computeExpensiveValue 只会在 a 或 b 改变时重新计算
 ```
