--- a/src/web/React/03-1.md
+++ b/src/web/React/03-1.md
@@ -10,5 +10,8 @@
 ## 额外的内存开销
 字符串refs需要React在内部为每个字符串创建和管理一个映射表。这不仅增加了CPU的处理负担，还可能增加了内存的使用。
 
-
+## 总结
+1. 字符串refs通过内部的字符串映射来工作，这会导致额外的内部处理。
+2. 它们可能导致在组件的生命周期中的不一致行为，尤其是在组件的卸载和重新挂载过程中。
+3. 字符串refs不利于React的未来更新和优化，如React Fiber架构。
 
