--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -1,6 +1,52 @@
 ## 类型推导和泛型
 请描述如何在 React 组件中使用泛型，并给出一个示例，展示如何为具有不同 prop 类型的多个组件创建一个高阶组件。
 ### 题解
+- 步骤 1：定义组件和它们的 prop 类型
+```tsx
+import React from 'react';
+
+interface PropsA {
+  message: string;
+}
+
+const ComponentA: React.FC<PropsA> = ({ message }) => (
+  <div>{message}</div>
+);
+
+interface PropsB {
+  count: number;
+}
+
+const ComponentB: React.FC<PropsB> = ({ count }) => (
+  <div>{count}</div>
+);
+```
+- 步骤 2：创建泛型高阶组件
+```tsx
+function withHOC<P>(WrappedComponent: React.ComponentType<P>) {
+  return class extends React.Component<P> {
+    render() {
+      return <WrappedComponent {...this.props} />;
+    }
+  };
+}
+```
+- 步骤 3：使用高阶组件
+```tsx
+const EnhancedComponentA = withHOC(ComponentA);
+const EnhancedComponentB = withHOC(ComponentB);
+```
+- 步骤 4：在应用中使用
+```tsx
+function App() {
+  return (
+    <div>
+      <EnhancedComponentA message="Hello from A" />
+      <EnhancedComponentB count={10} />
+    </div>
+  );
+}
+```
 
 
 ## 使用 TypeScript 的高阶组件（HOCs）
