--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -52,6 +52,49 @@ function App() {
 ## 使用 TypeScript 的高阶组件（HOCs）
 如何使用 TypeScript 为高阶组件（HOC）编写类型定义？请提供一个示例，展示如何为增强 React 组件的 HOC 添加类型注解。
 ### 题解
+- 步骤一：类型定义
+```tsx
+import React from 'react';
+
+// 定义传入组件的额外属性
+interface WithExtraInfoProps {
+  info: string;
+}
+
+// 高阶组件的类型定义
+function withExtraInfo<P extends object>(
+  WrappedComponent: React.ComponentType<P>
+): React.ComponentType<P & WithExtraInfoProps> {
+  // 高阶组件的实现
+  const ComponentWithExtraInfo = (props: P & WithExtraInfoProps) => (
+    <WrappedComponent {...props} />
+  );
+
+  return ComponentWithExtraInfo;
+}
+```
+- 步骤二：使用高阶组件
+```tsx
+interface MyComponentProps {
+  name: string;
+}
+
+const MyComponent: React.FC<MyComponentProps> = ({ name, info }) => (
+  <div>
+    <p>Name: {name}</p>
+    <p>Info: {info}</p>
+  </div>
+);
+
+// 使用高阶组件增强 MyComponent
+const EnhancedMyComponent = withExtraInfo(MyComponent);
+
+// 在应用中使用 EnhancedMyComponent
+const App = () => (
+  <EnhancedMyComponent name="Alice" info="Extra Information" />
+);
+```
+- 在这个例子中，`MyComponent`是一个接收`name`和`info`属性的组件。我们使用`withExtraInfo`来创建一个新的组件`EnhancedMyComponent`，它除了接收MyComponent的所有属性外，还接收一个`额外`的info属性。
 
 
 ## TypeScript 中的装饰器
