--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -99,14 +99,13 @@ const App = () => (
 
 ## TypeScript 中的装饰器
 请解释 TypeScript 装饰器的概念，并展示如何在 React 组件中使用它们。
-### 题解
-#### 装饰器的常见类型
+### 装饰器的常见类型
 1. 类装饰器：应用于类构造函数，用于观察、修改或替换类定义。
 2. 方法装饰器：应用于方法的属性描述符，可以用来监视、修改或替换方法定义。
 3. 访问器装饰器：应用于访问器的属性描述符。
 4. 属性装饰器：应用于属性的特性。
 5. 参数装饰器：应用于类构造函数或方法的参数。
-#### 在 React 组件中使用装饰器
+### 题解
 ```tsx
 // 定义一个简单的装饰器
 function withLogging<T extends { new (...args: any[]): {} }>(Component: T) {
