--- a/src/web/Vue/09.md
+++ b/src/web/Vue/09.md
@@ -38,8 +38,75 @@ gh-pages 分支，是 GitHub Pages 服务的固定分支，可以通过 HTTP 的
 deploy.yml 文件的内容：
 
 ```yaml
-name: deploy on:   push:     branches: [master] # master 分支有 push 时触发 jobs:   deploy:     runs-on: ubuntu-latest     steps:       - uses: actions/checkout@v2       - name: Setup Node.js v14.x         uses: actions/setup-node@v1         with:           node-version: '14.x'       - name: Install         run: npm install # 安装依赖       - name: Build         run: npm run build # 打包       - name: Deploy         uses: peaceiris/actions-gh-pages@v3 # 使用部署到 GitHub pages 的 action         with:           publish_dir: ./dist # 部署打包后的 dist 目录           github_token: ${{ secrets.VUE3_DEPLOY }} # secret 名           user_name: ${{ secrets.MY_USER_NAME }}           user_email: ${{ secrets.MY_USER_EMAIL }}           commit_message: Update Vite2.x + Vue3.x + TypeScript Starter # 部署时的 git 提交信息，自由填写
+name:
+  deploy on:
+    push:
+      branches: [master] # master 分支有 push 时触发
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node.js v14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
+      - name: Install
+        run: npm install # 安装依赖
+      - name: Build
+        run: npm run build # 打包
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3 # 使用部署到 GitHub pages 的 action
+        with:
+          publish_dir: ./dist # 部署打包后的 dist 目录
+          github_token: ${{ secrets.VUE3_DEPLOY }} # secret 名
+          user_name: ${{ secrets.MY_USER_NAME }}
+          user_email: ${{ secrets.MY_USER_EMAIL }}
+          commit_message: Update Vite2.x + Vue3.x + TypeScript Starter # 部署时的 git 提交信息，自由填写
 ```
+
+1. 检出代码。
+2. 设置 Node.js v14.x。
+3. 安装依赖。
+4. 构建（打包）应用。
+5. 使用 peaceiris/actions-gh-pages GitHub Action 部署打包后的内容到 GitHub Pages。
+
+自动合并由 Dependabot 创建的拉取请求（PR）<br />Dependabot 是 GitHub 的一个官方机器人，它会自动检测项目中的依赖，当依赖有新版本时，会自动创建一个拉取请求（PR），并在 PR 中提供更新日志和 diff 信息，方便我们查看更新内容。<br />但是，Dependabot 创建的 PR 默认是不会自动合并的，需要我们手动点击合并，这样就会增加我们的工作量。<br />为了解决这个问题，我们可以使用 GitHub Actions 来自动合并 Dependabot 创建的 PR。
+::: code-group
+
+```yaml [auto-marge-dependabot-pr.yml]
+name: Dependabot Auto Merge
+on:
+  pull_request:
+    types: [labeled, edited]
+
+jobs:
+  dependabot:
+    name: Dependabot
+    runs-on: ubuntu-latest
+    permissions: write-all
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}}
+    steps:
+      - name: Enable auto-merge for Dependabot PRs
+        run: gh pr merge --auto --squash "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+```
+
+```yaml [dependabot-auto-merge.yml]
+version: 2
+updates:
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'daily'
+      timezone: 'Asia/Shanghai'
+      time: '00:00'
+```
+
+:::
 
 ### 自动部署触发原理
 
