--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -1,42 +1,48 @@
 ## 类型推导和泛型
+
 请描述如何在 React 组件中使用泛型，并给出一个示例，展示如何为具有不同 prop 类型的多个组件创建一个高阶组件。
+
 ### 题解
+
 - 步骤 1：定义组件和它们的 prop 类型
+
 ```tsx
-import React from 'react';
+import React from 'react'
 
 interface PropsA {
-  message: string;
+  message: string
 }
 
-const ComponentA: React.FC<PropsA> = ({ message }) => (
-  <div>{message}</div>
-);
+const ComponentA: React.FC<PropsA> = ({ message }) => <div>{message}</div>
 
 interface PropsB {
-  count: number;
+  count: number
 }
 
-const ComponentB: React.FC<PropsB> = ({ count }) => (
-  <div>{count}</div>
-);
+const ComponentB: React.FC<PropsB> = ({ count }) => <div>{count}</div>
 ```
+
 - 步骤 2：创建泛型高阶组件
+
 ```tsx
 function withHOC<P>(WrappedComponent: React.ComponentType<P>) {
   return class extends React.Component<P> {
     render() {
-      return <WrappedComponent {...this.props} />;
+      return <WrappedComponent {...this.props} />
     }
-  };
+  }
 }
 ```
+
 - 步骤 3：使用高阶组件
+
 ```tsx
-const EnhancedComponentA = withHOC(ComponentA);
-const EnhancedComponentB = withHOC(ComponentB);
+const EnhancedComponentA = withHOC(ComponentA)
+const EnhancedComponentB = withHOC(ComponentB)
 ```
+
 - 步骤 4：在应用中使用
+
 ```tsx
 function App() {
   return (
@@ -44,21 +50,24 @@ function App() {
       <EnhancedComponentA message="Hello from A" />
       <EnhancedComponentB count={10} />
     </div>
-  );
+  )
 }
 ```
 
-
 ## 使用 TypeScript 的高阶组件（HOCs）
+
 如何使用 TypeScript 为高阶组件（HOC）编写类型定义？请提供一个示例，展示如何为增强 React 组件的 HOC 添加类型注解。
+
 ### 题解
+
 - 步骤一：类型定义
+
 ```tsx
-import React from 'react';
+import React from 'react'
 
 // 定义传入组件的额外属性
 interface WithExtraInfoProps {
-  info: string;
+  info: string
 }
 
 // 高阶组件的类型定义
@@ -68,15 +77,17 @@ function withExtraInfo<P extends object>(
   // 高阶组件的实现
   const ComponentWithExtraInfo = (props: P & WithExtraInfoProps) => (
     <WrappedComponent {...props} />
-  );
+  )
 
-  return ComponentWithExtraInfo;
+  return ComponentWithExtraInfo
 }
 ```
+
 - 步骤二：使用高阶组件
+
 ```tsx
 interface MyComponentProps {
-  name: string;
+  name: string
 }
 
 const MyComponent: React.FC<MyComponentProps> = ({ name, info }) => (
@@ -84,84 +95,179 @@ const MyComponent: React.FC<MyComponentProps> = ({ name, info }) => (
     <p>Name: {name}</p>
     <p>Info: {info}</p>
   </div>
-);
+)
 
 // 使用高阶组件增强 MyComponent
-const EnhancedMyComponent = withExtraInfo(MyComponent);
+const EnhancedMyComponent = withExtraInfo(MyComponent)
 
 // 在应用中使用 EnhancedMyComponent
-const App = () => (
-  <EnhancedMyComponent name="Alice" info="Extra Information" />
-);
+const App = () => <EnhancedMyComponent name="Alice" info="Extra Information" />
 ```
+
 - 在这个例子中，`MyComponent`是一个接收`name`和`info`属性的组件。我们使用`withExtraInfo`来创建一个新的组件`EnhancedMyComponent`，它除了接收MyComponent的所有属性外，还接收一个`额外`的info属性。
 
-
 ## TypeScript 中的装饰器
+
 请解释 TypeScript 装饰器的概念，并展示如何在 React 组件中使用它们。
+
 ### 装饰器的常见类型
+
 1. 类装饰器：应用于类构造函数，用于观察、修改或替换类定义。
 2. 方法装饰器：应用于方法的属性描述符，可以用来监视、修改或替换方法定义。
 3. 访问器装饰器：应用于访问器的属性描述符。
 4. 属性装饰器：应用于属性的特性。
 5. 参数装饰器：应用于类构造函数或方法的参数。
+
 ### 题解
+
 ```tsx
 // 定义一个简单的装饰器
 function withLogging<T extends { new (...args: any[]): {} }>(Component: T) {
-    return class extends Component {
-        componentDidMount() {
-            console.log(`Component ${Component.name} is mounted.`);
-        }
-
-        componentWillUnmount() {
-            console.log(`Component ${Component.name} is unmounting.`);
-        }
+  return class extends Component {
+    componentDidMount() {
+      console.log(`Component ${Component.name} is mounted.`)
     }
+
+    componentWillUnmount() {
+      console.log(`Component ${Component.name} is unmounting.`)
+    }
+  }
 }
 
 // 应用装饰器
 @withLogging
 class MyComponent extends React.Component {
-    render() {
-        return <div>Hello, World!</div>;
-    }
+  render() {
+    return <div>Hello, World!</div>
+  }
 }
 
-export default MyComponent;
+export default MyComponent
 ```
 
 ## 复杂状态管理
+
 在使用 TypeScript 的 React 项目中，如何有效地管理复杂状态？请提供一个使用 Context API 和 useReducer 的示例。
+
 ### 题解
 
+1. 定义 State 类型和 Action 类型
+
+```ts
+// 定义状态类型
+type StateType = {
+  count: number
+}
+
+// 定义动作类型
+type ActionType =
+  | { type: 'increment' }
+  | { type: 'decrement' }
+  | { type: 'reset' }
+```
+
+2. 创建 Reducer 函数
+
+```ts
+const reducer = (state: StateType, action: ActionType): StateType => {
+  switch (action.type) {
+    case 'increment':
+      return { count: state.count + 1 }
+    case 'decrement':
+      return { count: state.count - 1 }
+    case 'reset':
+      return { count: 0 }
+    default:
+      return state
+  }
+}
+```
+
+3. 创建 Context 和 Provider
+
+```tsx
+import React, { createContext, useReducer, useContext } from 'react'
+
+// 创建 Context
+const StateContext = createContext<
+  [StateType, React.Dispatch<ActionType>] | undefined
+>(undefined)
+
+// 创建 Provider 组件
+type StateProviderProps = { children: React.ReactNode }
+
+export const StateProvider: React.FC<StateProviderProps> = ({ children }) => {
+  const [state, dispatch] = useReducer(reducer, { count: 0 })
+
+  return (
+    <StateContext.Provider value={[state, dispatch]}>
+      {children}
+    </StateContext.Provider>
+  )
+}
+```
+
+4. 在应用中使用
+
+```tsx
+const CounterComponent = () => {
+  const context = useContext(StateContext)
+
+  if (!context)
+    throw new Error('useContext must be inside a Provider with a value')
+
+  const [state, dispatch] = context
+
+  return (
+    <div>
+      Count: {state.count}
+      <button onClick={() => dispatch({ type: 'increment' })}>Increment</button>
+      <button onClick={() => dispatch({ type: 'decrement' })}>Decrement</button>
+      <button onClick={() => dispatch({ type: 'reset' })}>Reset</button>
+    </div>
+  )
+}
+
+// 在应用中使用
+const App = () => (
+  <StateProvider>
+    <CounterComponent />
+  </StateProvider>
+)
+```
 
 ## 性能优化和 TypeScript
-请讨论使用 TypeScript 编写的 React 应用中的性能优化技巧。特别是，如何利用 TypeScript 的类型系统来减少运行时错误和提高渲染效率？
-### 题解
 
+请讨论使用 TypeScript 编写的 React 应用中的性能优化技巧。特别是，如何利用 TypeScript 的类型系统来减少运行时错误和提高渲染效率？
+
+### 题解
 
 ## 测试和 Mocking
-在 TypeScript 环境中，如何为 React 组件编写单元测试？请展示如何 mock 依赖项，并解释类型安全的 mocking 策略。
-### 题解
 
+在 TypeScript 环境中，如何为 React 组件编写单元测试？请展示如何 mock 依赖项，并解释类型安全的 mocking 策略。
+
+### 题解
 
 ## 类型安全的事件处理
-在 React 中，如何处理事件并确保类型安全？请提供一个示例，说明如何为不同类型的事件（如鼠标事件、键盘事件）编写类型安全的事件处理函数。
-### 题解
 
+在 React 中，如何处理事件并确保类型安全？请提供一个示例，说明如何为不同类型的事件（如鼠标事件、键盘事件）编写类型安全的事件处理函数。
+
+### 题解
 
 ## 使用 TypeScript 重构现有 JavaScript 代码
-如何将一个较大的、使用 JavaScript 编写的 React 项目迁移到 TypeScript？请讨论涉及的挑战、策略和最佳实践。
-### 题解
 
+如何将一个较大的、使用 JavaScript 编写的 React 项目迁移到 TypeScript？请讨论涉及的挑战、策略和最佳实践。
+
+### 题解
 
 ## 类型兼容性和类型推断
-讨论 TypeScript 中类型兼容性的概念，并举例说明如何在 React 项目中处理复杂的类型推断问题。
-### 题解
 
+讨论 TypeScript 中类型兼容性的概念，并举例说明如何在 React 项目中处理复杂的类型推断问题。
+
+### 题解
 
 ## 自定义 Hooks 与 TypeScript
-如何在 TypeScript 中编写自定义 React Hooks，并确保类型的正确性？请提供一个自定义 Hook 的示例，并解释其类型注解的过程。
-### 题解
 
+如何在 TypeScript 中编写自定义 React Hooks，并确保类型的正确性？请提供一个自定义 Hook 的示例，并解释其类型注解的过程。
+
+### 题解
