--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -104,7 +104,8 @@ const EnhancedMyComponent = withExtraInfo(MyComponent)
 const App = () => <EnhancedMyComponent name="Alice" info="Extra Information" />
 ```
 
-- 在这个例子中，`MyComponent`是一个接收`name`和`info`属性的组件。我们使用`withExtraInfo`来创建一个新的组件`EnhancedMyComponent`，它除了接收MyComponent的所有属性外，还接收一个`额外`的info属性。
+- 在这个例子中，`MyComponent`是一个接收`name`和`info`属性的组件。我们使用`withExtraInfo`
+  来创建一个新的组件`EnhancedMyComponent`，它除了接收MyComponent的所有属性外，还接收一个`额外`的info属性。
 
 ## TypeScript 中的装饰器
 
@@ -272,7 +273,8 @@ const UserComponent: React.FC<UserProps> = ({
 
 #### 优化渲染性能
 
-- 使用 React.memo: 使用 React.memo 来避免不必要的渲染。React.memo 会缓存组件的渲染结果，并在下一次渲染时进行比较。如果组件的 props 没有发生变化，那么就会直接使用缓存的结果，从而避免不必要的渲染。
+- 使用 React.memo: 使用 React.memo 来避免不必要的渲染。React.memo 会缓存组件的渲染结果，并在下一次渲染时进行比较。如果组件的
+  props 没有发生变化，那么就会直接使用缓存的结果，从而避免不必要的渲染。
 - 使用 useCallback: 使用 useCallback 来缓存函数，避免不必要的函数创建。
 - 使用 useMemo: 使用 useMemo 来缓存计算结果，避免不必要的计算。
 
@@ -373,6 +375,67 @@ monitorPerformance({
 在 TypeScript 环境中，如何为 React 组件编写单元测试？请展示如何 mock 依赖项，并解释类型安全的 mocking 策略。
 
 ### 题解
+
+1. **设置测试环境**：使用测试框架，如 `Jest`。Jest 支持 TypeScript，可以轻松集成到 React 项目中。
+2. **编写测试用例**：创建测试文件（例如`Component.test.tsx`），并在其中编写针对组件的测试用例。
+3. **Mock 依赖项**：当组件依赖外部模块或服务时，可以使用 Jest 的 `jest.mock()` 函数来模拟这些依赖项。这有助于隔离测试，确保它们不依赖于外部系统的状态。
+4. **类型安全的 Mocking**：在 TypeScript 中，确保 mock 对象遵循正确的类型非常重要。这通常通过定义具有相同接口的 mock
+   函数或对象来实现。
+
+::: code-group
+
+```tsx [MyComponent.tsx]
+import React from 'react'
+import { someService } from './someService'
+
+const MyComponent = () => {
+  const [data, setData] = React.useState<string>('')
+
+  React.useEffect(() => {
+    someService.getData().then(setData)
+  }, [])
+
+  return <div>{data}</div>
+}
+
+export default MyComponent
+```
+
+```ts [someService.ts]
+export const someService = {
+  getData: async () => {
+    // 实际获取数据的逻辑
+  }
+}
+```
+
+```tsx [MyComponent.test.tsx]
+import React from 'react'
+import { render, waitFor } from '@testing-library/react'
+import MyComponent from './MyComponent'
+import { someService } from './someService'
+
+jest.mock('./someService', () => ({
+  someService: {
+    getData: jest.fn()
+  }
+}))
+
+describe('MyComponent', () => {
+  it('should display data from someService', async () => {
+    // 设置 mock 返回值
+    ;(someService.getData as jest.Mock).mockResolvedValue('Mocked Data')
+
+    const { getByText } = render(<MyComponent />)
+
+    await waitFor(() => {
+      expect(getByText('Mocked Data')).toBeInTheDocument()
+    })
+  })
+})
+```
+
+:::
 
 ## 类型安全的事件处理
 
