--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -443,6 +443,85 @@ describe('MyComponent', () => {
 
 ### 题解
 
+在React中处理事件并确保类型安全通常涉及到使用TypeScript以及React的事件类型。TypeScript可以帮助你确保事件处理函数接收正确类型的事件对象。<br>
+下面是一个示例，展示了如何为鼠标事件和键盘事件编写类型安全的事件处理函数：
+::: code-group
+
+```tsx [键盘事件]
+import React from 'react'
+
+const App: React.FC = () => {
+  // 类型安全的鼠标事件处理函数
+  const handleMouseClick = (event: React.MouseEvent<HTMLButtonElement>) => {
+    console.log(`Mouse clicked at X: ${event.clientX}, Y: ${event.clientY}`)
+  }
+
+  // 类型安全的键盘事件处理函数
+  const handleKeyPress = (event: React.KeyboardEvent<HTMLInputElement>) => {
+    console.log(`Key pressed: ${event.key}`)
+  }
+
+  return (
+    <div>
+      <button onClick={handleMouseClick}>Click me</button>
+      <input onKeyPress={handleKeyPress} placeholder="Type something" />
+    </div>
+  )
+}
+
+export default App
+```
+
+```tsx [自定义事件]
+import React, { useState, ChangeEvent, FormEvent } from 'react'
+
+const App: React.FC = () => {
+  const [inputValue, setInputValue] = useState('')
+
+  // 类型安全的表单更改事件处理函数
+  const handleInputChange = (event: ChangeEvent<HTMLInputElement>) => {
+    setInputValue(event.target.value)
+  }
+
+  // 类型安全的表单提交事件处理函数
+  const handleSubmit = (event: FormEvent<HTMLFormElement>) => {
+    event.preventDefault()
+    console.log(`Form submitted with input: ${inputValue}`)
+  }
+
+  //它可以接收任意类型的参数。这种方式使得函数非常灵活，可以处理多种类型的自定义事件。
+  const handleCustomEvent = <T,>(data: T) => {
+    console.log('Handling custom event with data:', data)
+  }
+
+  return (
+    <div>
+      <form onSubmit={handleSubmit}>
+        <input
+          type="text"
+          value={inputValue}
+          onChange={handleInputChange}
+          placeholder="Enter something"
+        />
+        <button type="submit">Submit</button>
+      </form>
+
+      {/* 触发自定义事件处理函数 */}
+      <button onClick={() => handleCustomEvent<string>('Custom String')}>
+        Trigger Custom Event
+      </button>
+      <button onClick={() => handleCustomEvent<number>(123)}>
+        Trigger Custom Event with Number
+      </button>
+    </div>
+  )
+}
+
+export default App
+```
+
+:::
+
 ## 使用 TypeScript 重构现有 JavaScript 代码
 
 如何将一个较大的、使用 JavaScript 编写的 React 项目迁移到 TypeScript？请讨论涉及的挑战、策略和最佳实践。
