--- a/src/web/React/06.md
+++ b/src/web/React/06.md
@@ -522,20 +522,100 @@ export default App
 
 :::
 
-## 使用 TypeScript 重构现有 JavaScript 代码
-
-如何将一个较大的、使用 JavaScript 编写的 React 项目迁移到 TypeScript？请讨论涉及的挑战、策略和最佳实践。
-
-### 题解
-
-## 类型兼容性和类型推断
-
-讨论 TypeScript 中类型兼容性的概念，并举例说明如何在 React 项目中处理复杂的类型推断问题。
-
-### 题解
-
 ## 自定义 Hooks 与 TypeScript
 
 如何在 TypeScript 中编写自定义 React Hooks，并确保类型的正确性？请提供一个自定义 Hook 的示例，并解释其类型注解的过程。
 
 ### 题解
+
+创建一个名为 `useForm` 的 Hook，它用于处理表单的输入、验证和提交
+::: code-group
+
+```ts [定义类型和接口]
+interface FormOptions<TValues> {
+  initialValues: TValues
+  onSubmit: (values: TValues) => void
+  validate?: (values: TValues) => Partial<Record<keyof TValues, string>>
+}
+
+interface FormReturn<TValues> {
+  values: TValues
+  handleChange: (event: React.ChangeEvent<HTMLInputElement>) => void
+  handleSubmit: (event: React.FormEvent<HTMLFormElement>) => void
+  errors: Partial<Record<keyof TValues, string>>
+}
+```
+
+```ts [定义hook]
+import { useState } from 'react'
+
+function useForm<TValues>(options: FormOptions<TValues>): FormReturn<TValues> {
+  const [values, setValues] = useState<TValues>(options.initialValues)
+  const [errors, setErrors] = useState<Partial<Record<keyof TValues, string>>>(
+    {}
+  )
+
+  const handleChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    setValues({
+      ...values,
+      [event.target.name]: event.target.value
+    })
+  }
+
+  const handleSubmit = (event: React.FormEvent<HTMLFormElement>) => {
+    event.preventDefault()
+    if (options.validate) {
+      const newErrors = options.validate(values)
+      setErrors(newErrors)
+      if (Object.keys(newErrors).length > 0) return
+    }
+    options.onSubmit(values)
+  }
+
+  return { values, handleChange, handleSubmit, errors }
+}
+```
+
+```tsx [使用hook]
+import React from 'react'
+import { useForm } from './useForm'
+
+interface FormValues {
+  email: string
+  password: string
+}
+
+const MyForm = () => {
+  const form = useForm<FormValues>({
+    initialValues: { email: '', password: '' },
+    onSubmit: (values) => console.log(values),
+    validate: (values) => {
+      let errors: Partial<Record<keyof FormValues, string>> = {}
+      if (!values.email) errors.email = 'Email required'
+      if (!values.password) errors.password = 'Password required'
+      return errors
+    }
+  })
+
+  return (
+    <form onSubmit={form.handleSubmit}>
+      <input
+        name="email"
+        value={form.values.email}
+        onChange={form.handleChange}
+      />
+      {form.errors.email && <p>{form.errors.email}</p>}
+      <input
+        name="password"
+        type="password"
+        value={form.values.password}
+        onChange={form.handleChange}
+      />
+      {form.errors.password && <p>{form.errors.password}</p>}
+      <button type="submit">Submit</button>
+    </form>
+  )
+}
+```
+
+:::
